--- a/scss/sections/_general.scss
+++ b/scss/sections/_general.scss
@@ -1,4 +1,11 @@
-.container {
-  max-width: 1700px;
-  padding: 0 10px
+body {
+  @include font-regular(14px);
+  color: $black;
+}
+h2 {
+  @include font-bold(60px);
+  color: $black;
+}
+.red-text {
+  color: $red;
 }
