--- a/css/screen.css
+++ b/css/screen.css
@@ -58,37 +58,413 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-.container {
-  max-width: 1700px;
-  padding: 0 10px;
+@font-face {
+  font-family: "Montserrat-Regular";
+  src: url("../fonts/montserrat/regular/Montserrat-Regular.ttf") format("truetype"), url("../fonts/montserrat/regular/Montserrat-Regular.otf") format("opentype");
+}
+@font-face {
+  font-family: "Montserrat-Bold";
+  src: url("../fonts/montserrat/bold/Montserrat-Bold.ttf") format("truetype"), url("../fonts/montserrat/bold/Montserrat-Bold.otf") format("opentype");
+}
+body {
+  font-size: 14px;
+  font-family: "Montserrat-Regular", sans-serif;
+  color: #000;
 }
 
-.main-header {
-  overflow: hidden;
-  padding-top: 55px;
-  margin-bottom: 230px;
+h2 {
+  font-size: 60px;
+  font-family: "Montserrat-Bold", sans-serif;
+  color: #000;
 }
 
-a.logo {
-  display: block;
-  float: left;
+.red-text {
+  color: #ff343d;
 }
-a.logo h1 {
+
+.flex-header {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -webkit-align-items: baseline;
+  align-items: baseline;
+}
+.flex-header .flex-left {
+  color: gray;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+.flex-header .flex-right {
+  color: #fff;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+
+.logo {
+  margin-right: 55px;
+  position: relative;
+}
+.logo h1 {
+  text-indent: -9999px;
+}
+.logo .small-circle {
+  position: absolute;
+  right: -17%;
+  top: -18%;
+  display: inline-block;
+  width: 11px;
+  height: 11px;
+  background-color: white;
+  border: 3px solid #ff343d;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
   text-indent: -9999px;
 }
 
-.main-nav {
-  float: right;
+.phone-icon {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background: url("../img/phone-icon.png") 50% 50% no-repeat;
+  margin-right: 10px;
+  text-indent: -9999px;
 }
-.main-nav .menu {
-  display: block;
-  padding: 20px;
-  margin-top: -10px;
+
+.buy-btn {
+  display: inline-block;
+  background: transparent;
+  margin-right: 30px;
   border: none;
-  background: url("../img/menu.png") 50% 50% no-repeat;
+}
+.buy-btn .text-btn {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  font-size: 16px;
+  font-family: "Montserrat-Bold", sans-serif;
+  text-transform: uppercase;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.buy-btn:hover .text-btn {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.menu {
+  display: inline-block;
+  width: 25px;
+  height: 15px;
+  background: url("../img/menu-burger.png") 50% 50% no-repeat;
+  border: none;
   text-indent: -9999px;
+}
+
+.general-btn {
+  display: inline-block;
+  padding: 20px 35px;
+  border: none;
+  background: #fff;
+  -moz-border-radius: 28px;
+  -webkit-border-radius: 28px;
+  border-radius: 28px;
+  font-size: 18px;
+  font-family: "Montserrat-Bold", sans-serif;
+  text-transform: uppercase;
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.general-btn:hover {
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
 }
 
 .intro {
-  background: #3498db;
+  height: 100vh;
+  background: url("../img/intro-bg.png") 50% 0 no-repeat;
+  background-size: cover;
+  padding-top: 60px;
+}
+
+.about-fly {
+  display: -webkit-flex;
+  display: flex;
+}
+
+.droid-bg {
+  position: relative;
+  max-width: 615px;
+  background: url("../img/droid-bg.png") 0 50% no-repeat;
+  background-size: cover;
+  padding: 35px 0;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+
+.content-wrap {
+  position: absolute;
+  right: 10%;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.content-wrap h2 {
+  width: 285px;
+  margin-bottom: 15px;
+}
+.content-wrap p {
+  color: #92a1a5;
+}
+
+.three-circles {
+  display: inline-block;
+  width: 245px;
+  height: 495px;
+  background: url("../img/circle-part.png") 50% 50% no-repeat;
+  margin-left: 280px;
+  text-indent: -9999px;
+}
+
+.road-bg {
+  width: 100%;
+  background: url("../img/road-bg.png") 50% 0 no-repeat;
+  background-size: cover;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: stretch;
+  align-items: stretch;
+}
+
+.title-wrap {
+  padding: 0 110px 0 90px;
+  background: rgba(0, 0, 0, 0.65);
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.title-wrap h2 {
+  max-width: 360px;
+  color: #fff;
+}
+
+.btn-wrap {
+  position: relative;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.btn-wrap:after {
+  content: "";
+  display: inline-block;
+  width: 1px;
+  height: 175px;
+  background: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 58%;
+}
+.btn-wrap .general-btn {
+  margin-left: 40px;
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.features {
+  padding: 130px 0 55px;
+  text-align: center;
+}
+.features h2 {
+  font-size: 48px;
+  font-family: "Montserrat-Bold", sans-serif;
+}
+
+.features-list {
+  margin-top: 125px;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.features-list li {
+  margin: 0 0 25px 185px;
+  text-align: center;
+}
+.features-list li:nth-child(4n+1) {
+  margin-left: 0;
+}
+.features-list p {
+  font-size: 30px;
+  font-family: "Montserrat-Regular", sans-serif;
+}
+
+.technology-item:before {
+  content: "";
+  display: inline-block;
+  width: 95px;
+  height: 95px;
+  background: url("../img/technology-icon.png") 50% 50% no-repeat;
+  margin-bottom: 70px;
+}
+
+.signal-item:before {
+  content: "";
+  display: inline-block;
+  width: 65px;
+  height: 95px;
+  background: url("../img/signal-icon.png") 50% 50% no-repeat;
+  margin-bottom: 70px;
+}
+
+.use-item:before {
+  content: "";
+  display: inline-block;
+  width: 95px;
+  height: 95px;
+  background: url("../img/easy-icon.png") 50% 50% no-repeat;
+  margin-bottom: 70px;
+}
+
+.visibility-item:before {
+  content: "";
+  display: inline-block;
+  width: 95px;
+  height: 95px;
+  background: url("../img/visibility-icon.png") 50% 50% no-repeat;
+  margin-bottom: 70px;
+}
+
+.flying-generation {
+  position: relative;
+  overflow: hidden;
+  padding: 320px 0 230px;
+}
+.flying-generation h2 {
+  max-width: 535px;
+  margin-bottom: 50px;
+  font-size: 92px;
+  font-family: "Montserrat-Regular", sans-serif;
+}
+.flying-generation .general-btn {
+  background: transparent;
+  border: 1px solid #eff2f6;
+  color: #000;
+}
+.flying-generation .general-btn:hover {
+  border: 1px solid transparent;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+}
+
+.img-wrap {
+  position: absolute;
+  z-index: -100;
+  right: -10%;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  max-width: 905px;
+}
+.img-wrap .dron-img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.vision-generation {
+  background: url("../img/new-vision-bg.png") 50% 0 no-repeat;
+  background-size: cover;
+  background-color: #232323;
+  padding: 45px 0;
+}
+.vision-generation .container {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.vision-generation h2 {
+  margin-bottom: 50px;
+  font-size: 92px;
+  font-family: "Montserrat-Regular", sans-serif;
+  color: #fff;
+}
+.vision-generation .general-btn {
+  background: transparent;
+  border: 1px solid #3b3b3b;
+  color: #fff;
+}
+.vision-generation .general-btn:hover {
+  background: #fff;
+  border: 1px solid transparent;
+  color: #000;
+}
+
+.flex-wrap {
+  max-width: 535px;
+}
+
+.start-journey {
+  background: url("../img/start-journey-bg.png") 50% 0 no-repeat;
+  background-size: cover;
+  padding: 620px 0 205px;
+  text-align: center;
+}
+.start-journey .container {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.start-journey h2 {
+  margin-bottom: 60px;
+  font-size: 92px;
+  font-family: "Montserrat-Bold", sans-serif;
+  color: #fff;
+}
+.start-journey .general-btn {
+  color: #318f76;
+}
+
+.main-footer {
+  background: url("../img/footer-bg.png") 50% 50% no-repeat;
+  background-size: contain;
+  padding: 230px 0;
+  text-align: center;
+}
+.main-footer .container {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.main-footer .flex-content {
+  max-width: 1055px;
+}
+.main-footer .logo {
+  font-size: 24px;
+  font-family: "Montserrat-Bold", sans-serif;
+  text-transform: uppercase;
+}
+.main-footer p {
+  margin-top: 35px;
+  color: #92a1a5;
+}
+
+.small-link {
+  color: #92a1a5;
+  display: inline;
 }
