--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,7 +1,5 @@
-$blue: #3498db;
 $white: #fff;
 $black: #000;
-$gray: #ecf0f1;
-$green: #27ae60;
-$violet: #9b59b6;
-$dark-blue: #2c3e50;
+$grey: #92a1a5;
+$red: #ff343d;
+$dark-grey: #3b3b3b;
