--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,23 +1,70 @@
-.main-header {
-  overflow: hidden;
-  padding-top: 55px;
-  margin-bottom: 230px;
+.flex-header {
+  @include display-flex;
+  @include justify-content(space-between);
+  @include align-items(baseline);
+
+  .flex-left {
+    color: gray;
+    @include display-flex;
+    @include justify-content(space-between);
+  }
+
+  .flex-right {
+    color: $white;
+    @include display-flex;
+    @include justify-content(space-between);
+  }
 }
-a.logo {
-  display: block;
-  float: left;
+.logo {
+  margin-right: 55px;
+  position: relative;
   h1 {
     text-indent: -9999px;
   }
-}
-.main-nav {
-  float: right;
-  .menu {
-    display: block;
-    padding: 20px;
-    margin-top: -10px;
-    border: none;
-    background: url("../img/menu.png") 50% 50% no-repeat;
+  .small-circle {
+    position: absolute;
+    right: -17%;
+    top: -18%;
+    display: inline-block;
+    width: 11px;
+    height: 11px;
+    background-color: white;
+    border: 3px solid #ff343d;
+    @include border-radius(50%);
     text-indent: -9999px;
   }
+}
+.phone-icon {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background: url("../img/phone-icon.png") 50% 50% no-repeat;
+  margin-right: 10px;
+  text-indent: -9999px;
+}
+.buy-btn {
+  display: inline-block;
+  background: transparent;
+  margin-right: 30px;
+  border: none;
+  .text-btn {
+    border-bottom: 1px solid rgba(255, 255, 255, .3);
+    @include font-bold(16px);
+    text-transform: uppercase;
+    @include transition-duration(0.3s);
+  }
+  &:hover {
+    .text-btn {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.7);
+      color: rgba(0, 0, 0, 0.7)
+    }
+  }
+}
+.menu {
+  display: inline-block;
+  width: 25px;
+  height: 15px;
+  @include small-bg("../img/menu-burger.png");
+  border: none;
+  text-indent: -9999px;
 }
