--- a/css/screen.css
+++ b/css/screen.css
@@ -82,6 +82,85 @@ h2 {
   color: #ff343d;
 }
 
+.logo:hover .small-circle {
+  animation-name: pulse;
+  -webkit-animation-name: pulse;
+  animation-duration: 1.5s;
+  -webkit-animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+
+.three-circles:hover {
+  animation-name: pulse-right;
+  -webkit-animation-name: pulse-right;
+  animation-duration: 1.5s;
+  -webkit-animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1.3);
+    opacity: 0.7;
+  }
+  50% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.3);
+    opacity: 0.7;
+  }
+}
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(1.35);
+    opacity: 0.7;
+  }
+  50% {
+    -webkit-transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1.35);
+    opacity: 0.7;
+  }
+}
+@keyframes pulse-right {
+  0% {
+    transform: scale(1.3);
+    transform-origin: right;
+    opacity: 0.7;
+  }
+  50% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.3);
+    transform-origin: right;
+    opacity: 0.7;
+  }
+}
+@-webkit-keyframes pulse-right {
+  0% {
+    -webkit-transform: scale(1.35);
+    -webkit-transform-origin: right;
+    opacity: 0.7;
+  }
+  50% {
+    -webkit-transform: scale(1);
+    -webkit-transform-origin: right;
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1.35);
+    -webkit-transform-origin: right;
+    opacity: 0.7;
+  }
+}
 .flex-header {
   display: -webkit-flex;
   display: flex;
@@ -96,6 +175,15 @@ h2 {
   display: flex;
   -webkit-justify-content: space-between;
   justify-content: space-between;
+}
+.flex-header .flex-left p {
+  -moz-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.flex-header .flex-left p:hover {
+  color: #ff343d;
 }
 .flex-header .flex-right {
   color: #fff;
@@ -129,11 +217,11 @@ h2 {
 
 .phone-icon {
   display: inline-block;
-  width: 12px;
-  height: 12px;
-  background: url("../img/phone-icon.png") 50% 50% no-repeat;
   margin-right: 10px;
-  text-indent: -9999px;
+}
+
+.fa-phone {
+  font-weight: bold;
 }
 
 .buy-btn {
@@ -215,6 +303,7 @@ h2 {
   position: absolute;
   right: 10%;
   top: 50%;
+  z-index: 100;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
@@ -311,40 +400,47 @@ h2 {
   font-family: "Montserrat-Regular", sans-serif;
 }
 
-.technology-item:before {
-  content: "";
+.rotate {
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+
+.technology-item {
   display: inline-block;
   width: 95px;
   height: 95px;
   background: url("../img/technology-icon.png") 50% 50% no-repeat;
   margin-bottom: 70px;
+  text-indent: -9999px;
 }
 
-.signal-item:before {
-  content: "";
+.signal-item {
   display: inline-block;
   width: 65px;
   height: 95px;
   background: url("../img/signal-icon.png") 50% 50% no-repeat;
   margin-bottom: 70px;
+  text-indent: -9999px;
 }
 
-.use-item:before {
-  content: "";
+.use-item {
   display: inline-block;
   width: 95px;
   height: 95px;
   background: url("../img/easy-icon.png") 50% 50% no-repeat;
   margin-bottom: 70px;
+  text-indent: -9999px;
 }
 
-.visibility-item:before {
-  content: "";
+.visibility-item {
   display: inline-block;
   width: 95px;
   height: 95px;
   background: url("../img/visibility-icon.png") 50% 50% no-repeat;
   margin-bottom: 70px;
+  text-indent: -9999px;
 }
 
 .flying-generation {
