--- a/scss/sections/_about-fly.scss
+++ b/scss/sections/_about-fly.scss
@@ -17,6 +17,7 @@
   position: absolute;
   right: 10%;
   top: 50%;
+  z-index: 100;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 
