--- a/scss/sections/_features.scss
+++ b/scss/sections/_features.scss
@@ -20,35 +20,38 @@
     @include  font-regular(30px);
   }
 }
-.technology-item:before {
-  content: "";
+.rotate {
+  @include transition-duration(0.5s);
+}
+.technology-item {
   display: inline-block;
   width: 95px;
   height: 95px;
   @include small-bg("../img/technology-icon.png");
   margin-bottom: 70px;
+  text-indent: -9999px;
 }
-.signal-item:before {
-  content: "";
+.signal-item {
   display: inline-block;
   width: 65px;
   height: 95px;
   @include small-bg("../img/signal-icon.png");
   margin-bottom: 70px;
+  text-indent: -9999px;
 }
-.use-item:before {
-   content: "";
+.use-item {
    display: inline-block;
    width: 95px;
    height: 95px;
    @include small-bg("../img/easy-icon.png");
    margin-bottom: 70px;
+   text-indent: -9999px;
  }
-.visibility-item:before {
-  content: "";
+.visibility-item {
   display: inline-block;
   width: 95px;
   height: 95px;
   @include small-bg("../img/visibility-icon.png");
   margin-bottom: 70px;
+  text-indent: -9999px;
 }
