--- a/scss/sections/_general.scss
+++ b/scss/sections/_general.scss
@@ -9,3 +9,95 @@ h2 {
 .red-text {
   color: $red;
 }
+
+// ----------ANIMATIONS
+
+.logo {
+ &:hover {
+   .small-circle {
+     animation-name: pulse;
+     -webkit-animation-name: pulse;
+
+     animation-duration: 1.5s;
+     -webkit-animation-duration: 1.5s;
+
+     animation-iteration-count: infinite;
+     -webkit-animation-iteration-count: infinite;
+   }
+ }
+}
+.three-circles {
+  &:hover {
+    animation-name: pulse-right;
+    -webkit-animation-name: pulse-right;
+
+    animation-duration: 1.5s;
+    -webkit-animation-duration: 1.5s;
+
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+  }
+}
+
+  @keyframes pulse {
+    0% {
+      transform: scale(1.3);
+      opacity: 0.7;
+    }
+    50% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1.3);
+      opacity: 0.7;
+    }
+  }
+
+  @-webkit-keyframes pulse {
+    0% {
+      -webkit-transform: scale(1.35);
+      opacity: 0.7;
+    }
+    50% {
+      -webkit-transform: scale(1);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scale(1.35);
+      opacity: 0.7;
+    }
+  }
+  @keyframes pulse-right {
+    0% {
+      transform: scale(1.3);
+      transform-origin: right;
+      opacity: 0.7;
+    }
+    50% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1.3);
+      transform-origin: right;
+      opacity: 0.7;
+    }
+  }
+@-webkit-keyframes pulse-right {
+  0% {
+    -webkit-transform: scale(1.35);
+    -webkit-transform-origin: right;
+    opacity: 0.7;
+  }
+  50% {
+    -webkit-transform: scale(1);
+    -webkit-transform-origin: right;
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1.35);
+    -webkit-transform-origin: right;
+    opacity: 0.7;
+  }
+}
