--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -18,5 +18,6 @@
 @import "sections/_vision-generation";
 @import "sections/_start-journey";
 @import "layout/footer";
+@import "base/responsive";
 
 
