--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -1,5 +1,56 @@
 .intro {
   height: 100vh;
-  @include section-bg("../img/intro-bg.png");
+  background: $grey-bg url(../img/intro-part-bg.png) top right no-repeat;
+  background-size: 38% 122%;
   padding-top: 60px;
+  & > .container {
+    @include display-flex;
+    @include justify-content(flex-start);
+    @include align-items(center);
+    margin-top: 5%;
+  }
+}
+.markers-list {
+  margin-right: 70px;
+  li {
+    display: block;
+    width: 7px;
+    height: 7px;
+    background: #e1e1e1;
+    margin-bottom: 20px;
+    @include border-radius(50%);
+    text-indent: -9999px;
+  }
+}
+.slider-wrap {
+  @include display-flex;
+}
+.slider-text {
+  max-width: 400px;
+  margin-right: 55px;
+  h2 {
+    margin-bottom: 40px;
+  }
+  p {
+    color: $grey;
+    line-height: 30px;
+  }
+}
+.wrap-circle {
+  @include display-flex;
+}
+.big-circle {
+  position: relative;
+  padding: 200px;
+  background: $white;
+  @include border-radius(50%);
+}
+.dron-intro {
+  display: block;
+  max-width: 630px;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
