--- a/scss/sections/_features.scss
+++ b/scss/sections/_features.scss
@@ -9,8 +9,10 @@
   margin-top: 125px;
   @include display-flex;
   @include justify-content(center);
+  @include align-items(center);
+  @include flex-wrap(wrap);
   li {
-    margin: 0 0 25px 185px;
+    margin: 0 0 7% 7%;
     text-align: center;
     &:nth-child(4n+1) {
       margin-left: 0;
