--- a/scss/sections/_general.scss
+++ b/scss/sections/_general.scss
@@ -26,10 +26,10 @@ h2 {
    }
  }
 }
-.three-circles {
+.max-circle {
   &:hover {
-    animation-name: pulse-right;
-    -webkit-animation-name: pulse-right;
+    animation-name: pulse;
+    -webkit-animation-name: pulse;
 
     animation-duration: 1.5s;
     -webkit-animation-duration: 1.5s;
@@ -68,36 +68,38 @@ h2 {
       opacity: 0.7;
     }
   }
-  @keyframes pulse-right {
-    0% {
-      transform: scale(1.3);
-      transform-origin: right;
-      opacity: 0.7;
-    }
-    50% {
-      transform: scale(1);
-      opacity: 1;
-    }
-    100% {
-      transform: scale(1.3);
-      transform-origin: right;
-      opacity: 0.7;
-    }
-  }
-@-webkit-keyframes pulse-right {
+
+.scroll-wrap {
+  animation-name: floating;
+  -webkit-animation-name: floating;
+
+  animation-duration: 1.5s;
+  -webkit-animation-duration: 1.5s;
+
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+
+@keyframes floating {
   0% {
-    -webkit-transform: scale(1.35);
-    -webkit-transform-origin: right;
-    opacity: 0.7;
+    transform: translateY(0%);
   }
   50% {
-    -webkit-transform: scale(1);
-    -webkit-transform-origin: right;
-    opacity: 1;
+    transform: translateY(100%);
   }
   100% {
-    -webkit-transform: scale(1.35);
-    -webkit-transform-origin: right;
-    opacity: 0.7;
+    transform: translateY(0%);
+  }
+}
+
+@-webkit-keyframes floating {
+  0% {
+    -webkit-transform: translateY(0%);
+  }
+  50% {
+    -webkit-transform: translateY(100%);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
   }
 }
