--- a/scss/sections/_about-fly.scss
+++ b/scss/sections/_about-fly.scss
@@ -81,6 +81,15 @@
   position: relative;
   text-align: center;
   width: 45%;
+  .hover-wrap {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 50%;
+    background: rgba(0, 0, 0, .65);
+    display: none;
+  }
   .general-btn {
     margin-top: 55%;
     @include  rotate(90deg);
@@ -91,8 +100,6 @@
   position: absolute;
   bottom: 0;
   right: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
   width: 1px;
   height: 175px;
   background: $white;
