--- a/scss/sections/_vision-generation.scss
+++ b/scss/sections/_vision-generation.scss
@@ -3,7 +3,7 @@
   @include display-flex;
   h2 {
     margin-bottom: 50px;
-    @include big-h2;
+    @include font-regular(82px);
     color: $white;
   }
   .general-btn {
